# rpi_baremetal_rust

./: .gitignore  Cargo.toml  Makefile  linker.ld  notes.txt
scripts/: test_qemu.sh
src/: font8x8.h  font8x8.rs  framebuffer.c  framebuffer.h  framebuffer.rs  gpio.c  gpio.h  gpio.sbak  kernel_main.c  lib.c  lib.h  lib.rs  main.S  main.bak  main.s.bak  mmio.rs  peripherals.c  peripherals.h  timers.c  timers.h  uart.c  uart.h  uart.rs  utility.c  utility.h
